shutter (0.80~ppa1) jaunty; urgency=low

  * New features
    -- Added arrow shape to Drawing Tool
  * fixed bugs
    -- LP: #312221
       [Item is drawn in bottom-right point of the cursor]
    -- LP: #336122
       [Ctrl+resize in editor moves the shape]
    -- LP: #340503
       [Show item properties on double-click]
    -- LP: #353819
       [check window border option when calculating shape]
    -- LP: #353824
       [fix advanced selection tool when using compiz]
  * Drawing Tool
    -- LP: #311578
       [resize canvas]
    -- LP: #318452
       [save and restore last used tool]
    -- LP: #338809
       [keep tool focus after one usage]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Mon, 20 Apr 2009 02:04:06 +0200

shutter (0.70.2~ppa4) jaunty; urgency=low

  * fixed bugs
    -- LP: #339139
       [Shutter selects incorrect target window]
    -- LP: #340855 + LP: #340864
       [fixed save-as function]	
    -- LP: #340856
       [main window is partly visible on screenshots]
    -- LP: #340990
       [Shutter crashes when xserver grab fails]
    -- LP: #341459
       [Ctrl+ + doesn't zoom in drawing area]
    -- LP: #347821
       [decode filesize properly]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 24 Mar 2009 21:41:37 +0100

shutter (0.70.1~ppa2) jaunty; urgency=low

  * fixed bugs
    -- LP: #260771
       [Detect 'window-manager-changed' event]	
    -- LP: #328654
       [Weird paths after uploading]
    -- LP: #338829
       [Uploading to imageshack is broken]
    -- LP: #338990
       [Open with dialog freezes shutter and desktop]
    -- LP: #340253
       [Capture Website creates two files]
    -- LP: #340459
       [Use fallback icons if icon does not exist]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 10 Mar 2009 23:06:25 +0100

shutter (0.70~ppa11) jaunty; urgency=low
  * General changes
    -- Rebranding from GScrot to Shutter